# exlogic

./: eDecoder  eEncoder  pyproject.toml
exlogic/: __init__.py
exlogic/base/: __init__.py  eOperations.py  eTensor.py  eVector.py
