[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exlogic"
version = "0.1.0"
description = "EXplicit LOGarithmic encoder/decoder library"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/exlogic"
Repository = "https://github.com/yourusername/exlogic"

[tool.setuptools]
packages = ["exlogic"]
